--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -197,9 +197,8 @@ a:hover {
 
 /* Typing indicator */
 .typing-indicator {
-  position: absolute;
-  bottom: 65px; 
-  left: 1rem;
+  position: relative; /* or static */
+  margin-top: 0.25rem;
   font-style: italic;
   color: #999;
   font-size: 0.85rem;
