--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,9 +8,9 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  /* overflow: hidden; */
+  overflow: hidden;            /* Prevent global scroll */
 }
 
-/* body {
-  overscroll-behavior: none;
-} */
+body {
+  overscroll-behavior: none;   /* Prevent scroll bounce on mobile */
+}
