--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,15 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-/* html,
+html,
 body,
 #root {
   height: 100%;
   margin: 0;
   padding: 0;
   overflow: hidden;            
-}
-
-body {
   overscroll-behavior: none;  
-} */
+}
