--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,6 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  /* overflow: hidden;            
-  overscroll-behavior: none;   */
+  overflow: hidden;            
+  overscroll-behavior: none;  
 }
